--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
             </p>
             <hr style="border-style: none; width: 100%; height:0vh;" />
             <img src="https://media.discordapp.net/attachments/954727965730672650/956949344035143690/unknown.png?width=853&height=368" alt="">
+            <center>
+                <p>
+                    Made by Kristian Åkerblom
+                </p>
+            </center>
         </div>
     </div>
 </body>
